--- a/public/clients/assets/css/style.css
+++ b/public/clients/assets/css/style.css
@@ -2373,49 +2373,49 @@ h6, .h6, blockquote {
   .rpb-150,
   .rpy-150 {
     padding-bottom: 150px; }
-  /* Margin Around */
+/* Margin Around */
   .rm-0 {
     margin: 0px !important; }
   .rm-5 {
-    margin: 5px !important; }
+  margin: 5px !important; }
   .rm-10 {
-    margin: 10px; }
+  margin: 10px; }
   .rm-15 {
-    margin: 15px; }
+  margin: 15px; }
   .rm-20 {
-    margin: 20px; }
+  margin: 20px; }
   .rm-25 {
-    margin: 25px; }
+  margin: 25px; }
   .rm-30 {
-    margin: 30px; }
+  margin: 30px; }
   .rm-35 {
-    margin: 35px; }
+  margin: 35px; }
   .rm-40 {
-    margin: 40px; }
+  margin: 40px; }
   .rm-45 {
-    margin: 45px; }
+  margin: 45px; }
   .rm-50 {
-    margin: 50px; }
+  margin: 50px; }
   .rm-55 {
-    margin: 55px; }
+  margin: 55px; }
   .rm-60 {
-    margin: 60px; }
+  margin: 60px; }
   .rm-65 {
-    margin: 65px; }
+  margin: 65px; }
   .rm-70 {
-    margin: 70px; }
+  margin: 70px; }
   .rm-75 {
-    margin: 75px; }
+  margin: 75px; }
   .rm-80 {
-    margin: 80px; }
+  margin: 80px; }
   .rm-85 {
-    margin: 85px; }
+  margin: 85px; }
   .rm-90 {
-    margin: 90px; }
+  margin: 90px; }
   .rm-95 {
-    margin: 95px; }
+  margin: 95px; }
   .rm-100 {
-    margin: 100px; }
+  margin: 100px; }
   .rm-105 {
     margin: 105px; }
   .rm-110 {
@@ -4607,7 +4607,8 @@ h6, .h6, blockquote {
     .destination-item.style-two:hover .more {
       color: var(--heading-color); }
     .destination-item.style-two.bgc-lighter {
-      background: var(--lighter-color); }
+      background: var(--lighter-color);
+      border: 1px solid var(--border-color); }
       .destination-item.style-two.bgc-lighter .content {
         padding: 10px 35px 15px; }
   .destination-item.style-three {
@@ -8235,3 +8236,40 @@ blockquote {
   justify-content: center; }
   .footer-bottom-nav li {
     margin: 0 13px 5px; }
+
+
+
+/* Booking Transport */
+
+.choose-car-type {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  appearance: none;
+}
+.choose-car-type:focus {
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13,110,253,.25);
+}
+
+.form-check-input [type="checkbox"] {
+  width: 24px !important;
+  height: 24px !important;
+  border-radius: 4px !important;
+  margin-top: 0 !important;
+  margin-right: 8px;
+  background-color: #fff;
+  border: 1.5px solid #bdbdbd;
+  display: inline-block;
+  vertical-align: middle;
+}
